cmake_minimum_required(VERSION 3.21)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1 StableMatching.cpp)
add_executable(lab2a Lab2a.cpp)
add_executable(lab2b Lab2b.cpp)
add_executable(lab3a Lab3a.cpp)
add_executable(lab3b Lab3b.cpp)
add_executable(lab4a Lab4a.cpp)
add_executable(lab4b Lab4b.cpp)
add_executable(lab5a Lab5a.cpp)
add_executable(lab5b Lab5b.cpp)

