cmake_minimum_required(VERSION 3.21)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1 StableMatching.cpp)
add_executable(lab2a Lab2a.cpp)
add_executable(lab2b Lab2b.cpp)
add_executable(lab3a Lab3a.cpp)
add_executable(lab3b Lab3b.cpp)
add_executable(lab4a Lab4a.cpp)
add_executable(lab4b Lab4b.cpp)
add_executable(lab5a Lab5a.cpp)
add_executable(lab5b Lab5b.cpp)
add_executable(lab7a Lab7a.cpp)
add_executable(lab7b Lab7b.cpp)
add_executable(lab8a Lab8a.cpp)
add_executable(lab8b Lab8b.cpp)
add_executable(lab9a Lab9a.cpp)
add_executable(lab9b Lab9b.cpp)
add_executable(lab10a Lab10a.cpp)
add_executable(lab10b Lab10b.cpp)
add_executable(lab11a Lab11a.cpp)
add_executable(lab11b Lab11b.cpp)
add_executable(lab12a Lab12a.cpp)
add_executable(lab12b Lab12b.cpp)
